# XAudioTool

./: .gitignore  CMakeLists.txt  README.md  build.sh
lib/win64/: gflags.lib
lib/win64_debug/: gflags_debug.lib
src/Core/: AudioAssistant.cc  AudioAssistant.cpp  AudioAssistant.h  Core.vcxproj  Core.vcxproj.filters  FileHelper.hpp  TimeHelp.hpp
test_tool/test_win/: test_win.cpp  test_win.sln  test_win.vcxproj  test_win.vcxproj.filters
